@@ -12,7 +12,7 @@ import Command
 import Annex.UUID
 
 command :: [Command]
-command = [Command "configlist" paramNothing needsRepo seek
+command = [Command "configlist" paramNothing defaultChecks seek
 		"outputs relevant git configuration"]
 
 seek :: [CommandSeek]
