@@ -13,7 +13,7 @@ import qualified Annex.Queue
 import Backend
 	
 command :: [Command]
-command = [Command "lock" paramPaths needsRepo seek "undo unlock command"]
+command = [Command "lock" paramPaths defaultChecks seek "undo unlock command"]
 
 seek :: [CommandSeek]
 seek = [withFilesUnlocked start, withFilesUnlockedToBeCommitted start]
