@@ -13,7 +13,7 @@ import Logs.Location
 import Annex.Content
 
 command :: [Command]
-command = [Command "setkey" paramPath needsRepo seek
+command = [Command "setkey" paramPath defaultChecks seek
 	"sets annexed content for a key using a temp file"]
 
 seek :: [CommandSeek]
